# allegro-pinpoint

./: .gitignore  CMakeLists.txt  README.md
assets/datasets/: cities.csv
src/: city.cpp  city.h  datapoint.cpp  datapoint.h  main.cpp  main.h
